# filetoggler

./: .gitignore  LICENSE  README.md  filetoggler.1  meson.build
completions/: filetoggler.bash  ft.bash
debian/: changelog  control  copyright
src/: cli.cpp  cli.hpp  core.cpp  core.hpp  gui.cpp  gui.hpp  main.cpp  meson.build
src/proc/: dbgthread.c  dbgthread.h  format_backtrace.c  format_backtrace.h  format_gdb.c  format_gdb.h  stackdump.c  stackdump.h
src/util/: args.c  args.h  fileent_list.c  fileent_list.h  logging-ft.h  logging.c  opt_parser.c  opt_parser.h  prefix_map.c  prefix_map.h  string_list.c  string_list.h  wfileent_list.c  wfileent_list.h  wstring.c  wstring.h  wstring_list.c  wstring_list.h
tests/: meson.build  test_core.cpp
